Fix the problem big empty white space between error display and when it is ok. In public/css/style.css, so in the '.form-control small' selector, change the value of the 'position' property to 'relative' and change the value of the 'bottom' property to '0'. In the '.form-control.error small' selector, remove the 'visibility' property and set the 'display' property with the 'initial' value, then creation of the '.form-control.sucess small' selector and creation of the 'display' property  with the value 'none'.

--- a/books_exchange/public/css/style.css
+++ b/books_exchange/public/css/style.css
@@ -894,14 +894,18 @@ body {
 
 .form-control small {
     color: #e74c3c;
-    position: absolute;
-    bottom: -15px;
+    position: relative;
+    bottom: 0;
     left: 0;
-    visibility: hidden;
+    display: initial;
 }
 
 .form-control.error small {
-    visibility: visible;
+    display: initial;
+}
+
+.form-control.success small {
+    display: none;
 }
 
 .form button {
